<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        />

    <item
        android:id="@+id/menu_track"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_music_note_24"
        android:title="@string/tracks"/>

    <item
        android:id="@+id/menu_player"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_play_circle_filled_24"
        android:title="@string/player"/>



    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"/>

</menu>