<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_track"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackFragment">

    <ImageView
        android:id="@+id/player_background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:scaleX="2"
        android:src="@drawable/img_jatra" />

    <TextView
        android:id="@+id/text_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="15dp"
        android:text="@string/album"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_track_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        android:text="10"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_album" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@id/text_track_detail"
        app:layout_constraintTop_toBottomOf="@id/text_album">


        <TextView
            android:id="@+id/text_album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="20dp"
            android:text="Jatra Special"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_album_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="By Bijen Shrestha"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/text_album_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corner_with_color_black"
        app:layout_constraintTop_toBottomOf="@id/text_track_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menuTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/round_corner_with_color_blue"
            android:paddingVertical="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:background="@color/transparent"
                android:drawableTop="@drawable/ic_baseline_info_36"
                android:text="@string/about"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/menuTopBar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableTop="@drawable/ic_baseline_share_36"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/button_about" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableTop="@drawable/ic_baseline_cloud_download_36"
                android:text="@string/download"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/button_share" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableTop="@drawable/ic_baseline_favorite_36"
                android:text="@string/favorite"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/button_download" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corner_with_color_black"
        app:layout_constraintTop_toBottomOf="@id/layout_menu_bar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/round_corner_with_color_blue">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_play_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/play_all"
                android:textAllCaps="true"
                android:textColor="@color/white" />


            <!--            todo: scroll view needs to work-->
            <!--            <ScrollView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0dp"-->
            <!--                android:fillViewport="true"-->
            <!--                android:scrollbars="vertical">-->

            <include layout="@layout/layout_playlist"/>

            <!--            </ScrollView>-->

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>