<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:background="@color/background"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_1"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/round_corner_with_color_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_constraint_1"
            android:padding="10dp"
            >

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_outline"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img_bijen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/text_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/image_profile"/>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/detail"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/text_user_name"/>




        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_constraint_2"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:background="@drawable/round_corner_with_color_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_name"
            >


            <TextView
                android:id="@+id/account_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_info"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/layout_constraint_2"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/account_info"
                app:layout_constraintTop_toTopOf="@id/account_info">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_account_info_edit"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_edit_24"
                    android:background="@color/transparent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/account_info_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/account_info"
                app:layout_constraintTop_toBottomOf="@id/account_info">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/icon_call"
                    android:drawableStart="@drawable/ic_baseline_call_36"
                    />


                <TextView
                    android:id="@+id/text_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="Mobile"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/icon_call"
                    />

                <TextView
                    android:id="@+id/text_mobile_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="+977-9818123456"
                    android:textColor="@color/detail"
                    app:layout_constraintStart_toEndOf="@id/icon_call"
                    app:layout_constraintTop_toBottomOf="@id/text_mobile" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/account_info_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/account_info"
                app:layout_constraintTop_toBottomOf="@id/account_info_1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/icon_email"
                    android:drawableStart="@drawable/ic_baseline_email_36"
                    />


                <TextView
                    android:id="@+id/text_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="Email"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/icon_email"
                    />

                <TextView
                    android:id="@+id/text_email_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="bijenshrestha@12.com"
                    android:textColor="@color/detail"
                    app:layout_constraintStart_toEndOf="@id/icon_email"
                    app:layout_constraintTop_toBottomOf="@id/text_email" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/account_info_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/account_info"
                app:layout_constraintTop_toBottomOf="@id/account_info_2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/icon_address"
                    android:drawableStart="@drawable/ic_baseline_person_pin_circle_36"
                    />


                <TextView
                    android:id="@+id/text_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="Address"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/icon_address"
                    />

                <TextView
                    android:id="@+id/text_address_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="Bhaktapur, Nepal"
                    android:textColor="@color/detail"
                    app:layout_constraintStart_toEndOf="@id/icon_address"
                    app:layout_constraintTop_toBottomOf="@id/text_address" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/account_info_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/account_info"
                app:layout_constraintTop_toBottomOf="@id/account_info_3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/icon_dob"
                    android:drawableStart="@drawable/ic_baseline_cake_36"
                    />


                <TextView
                    android:id="@+id/text_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="D.O.B"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/icon_dob"
                    />

                <TextView
                    android:id="@+id/text_dob_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="2000-01-01"
                    android:textColor="@color/detail"
                    app:layout_constraintStart_toEndOf="@id/icon_dob"
                    app:layout_constraintTop_toBottomOf="@id/text_dob" />
            </androidx.constraintlayout.widget.ConstraintLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>






    </LinearLayout>

<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottom_navigation"-->
<!--        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/background"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:menu="@menu/bottom_navigation_menu" />-->

</androidx.constraintlayout.widget.ConstraintLayout>